# factor-miner

./: .gitignore  Factor_Evaluation.ipynb  README.md  app.ipynb  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: 556_meta
deployment/: build.sh  deploy.Dockerfile
pages/: create.py  results.py
src/core/: analysis_restore.py  auth.py  calculations.py  constants.py  context.py  cookie_utils.py  environment.py  init.py  job_restore.py  jwt_utils.py  processing.py  types.py  utils.py  validation.py
src/core/calculations/: __init__.py  factor_analysis.py  feature_selection.py  forward_returns.py  returns.py  selection.py  utils.py
src/core/config/: constants.py  environment.py  paths.py
src/core/types/: models.py
src/core/utils/: common.py  cookie_utils.py  jwt_utils.py  local_storage_utils.py
src/data/: readers.py
src/integrations/: p123.py
src/internal/: auth.py  config.py  content.py  errors.py  init.py  links.py  p123_client.py  sidebar.py
src/jobs/: analyze.py  manager.py  worker.py
src/logic/: calculations.py  event_handlers.py
src/services/: analysis_utils.py  benchmark_service.py  create_service.py  dataset_service.py  history_service.py  p123_client.py  parquet_utils.py  processing.py  readers.py  writers.py
src/ui/: components.py  constants.py  header.py  navigation.py  pages.py  router.py  sidebar.py  step_builders.py  styles.py
src/ui/components/: __init__.py  analyses.py  common.py  datasets.py  headers.py  jobs.py  table_builder.py  tables.py
src/workers/: analysis_service.py  manager.py  worker.py
(+16 files in other folders)
